Ajustes na centralização do Modal TipsCode

--- a/index.css
+++ b/index.css
@@ -20,8 +20,8 @@ body {
   font-size: 16px;
   margin-top: 10px;
   border-radius: 20px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+  margin-left: 20px;
+  
 }
 
 .btn:hover {
@@ -49,12 +49,21 @@ body {
   width: 90%;
   max-width: 400px;
   text-align: center;
+  
 }
 
 .modal-content h2 {
   margin-bottom: 20px;
   font-size: 18px;
 }
+
+.form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 15px;
+}
+
 
 .modal-content input {
   width: 100%;
@@ -64,6 +73,7 @@ body {
   border-radius: 5px;
   background-color: #282828;
   color: #fff;
+  
 }
 
 .modal-content input::placeholder {
